[package]
name = "eek"
version = "0.3.0"
edition = "2024"
license = "GPL-2.0-only"
description = "eek! lightweight LLM proxy"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "signal", "time", "macros"] }
hyper = { version = "1", default-features = false, features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "server-graceful", "http1", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "webpki-tokio", "ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
http-body-util = "0.1"
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
